deploy/retrieveUnpackaged/objects/Coaching_Log__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Denotes the type of activity performed.</description>
        <inlineHelpText>Please select the type of activity to be performed.</inlineHelpText>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>1x1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side by side</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Denotes the completed date.</description>
        <inlineHelpText>This date is automatically populated when the log is saved as completed.</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Denotes the duration of the coaching.</description>
        <inlineHelpText>Please enter a duration when you have completed your coaching.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Denotes the rep who was coached.</description>
        <inlineHelpText>Select the rep who this coaching log is with.</inlineHelpText>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001nvHQEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Please enter the notes from your coaching session.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Denotes the status of the coaching log.</description>
        <inlineHelpText>Please select a status.  When completed is selected the completed date will populate and the duration will become required. The rep and owner (manager) will receive email notification of the completion.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Coaching Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Manager__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coaching Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coaching Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Must_insert_duration_when_completing</fullName>
        <active>true</active>
        <description>The duration must be populated when the status is completed</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Completed&quot;), OR(Duration__c = 0.00, ISNULL(Duration__c)))</errorConditionFormula>
        <errorMessage>You must enter a duration before saving with a status of completed.</errorMessage>
    </validationRules>
</CustomObject>